--- a/index.html
+++ b/index.html
@@ -22,63 +22,111 @@
         <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
-    <div>
-      <!-- секция герой -->
+    <main>
+      <div>
+        <!-- секция герой -->
+        <section>
+          <h1>Effective Solutionsfor <br />Your Business</h1>
+          <button type="button">Order Service</button>
+        </section>
+      </div>
+      <!-- секция2 -->
       <section>
-        <h1>Effective Solutionsfor <br />Your Business</h1>
-        <button type="button">Order Service</button>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the businessproblem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
-    </div>
-    <!-- секция2 -->
-    <section>
-      <ul>
-        <li>
-          <h2>Strategy</h2>
-          <p>
-            Our goal is to identify the businessproblem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h2>Punctuality</h2>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h2>Diligence</h2>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h2>Technologies</h2>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <!-- секция3 -->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
-        <li><img src="./images/monitor.jpg" alt="monitor" width="360" /></li>
-        <li><img src="./images/telefon.jpg" alt="smartfon" width="360" /></li>
-        <li>
-          <img src="./images/noyttelefon.jpg" alt="noyttelefon" width="360" />
-        </li>
-      </ul>
-    </section>
-    <!-- секция4 -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li></li>
-      </ul>
-    </section>
+      <!-- секция3 -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li><img src="./images/monitor.jpg" alt="monitor" width="360" /></li>
+          <li><img src="./images/telefon.jpg" alt="smartfon" width="360" /></li>
+          <li>
+            <img src="./images/noyttelefon.jpg" alt="noyttelefon" width="360" />
+          </li>
+        </ul>
+      </section>
+      <!-- секция4 -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/imgfotomark.jpg"
+              alt="mark"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/fototom.jpg"
+              alt="tom"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/fotocamila.jpg"
+              alt="camila"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/fotodaniel.jpg"
+              alt="daniel"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="/">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
