--- a/index.html
+++ b/index.html
@@ -10,52 +10,52 @@
     <!-- шапка сторінки  -->
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-      <div>
-        <!-- секция герой -->
-        <section>
-          <h1>Effective Solutionsfor <br />Your Business</h1>
-          <button type="button">Order Service</button>
-        </section>
-      </div>
+      <!-- секция герой -->
+      <section>
+        <h1>Effective Solutionsfor <br />Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <!-- секция2 -->
       <section>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the businessproblem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
