--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- шапка сторінки  -->
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -20,14 +20,14 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <!-- секция герой -->
       <section>
-        <h1>Effective Solutionsfor <br />Your Business</h1>
+        <h1>Effective Solutionsfor Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- секция2 -->
@@ -36,7 +36,7 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the businessproblem to walk away with the
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
