--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </section>
       <!-- секция2 -->
       <section>
+        <h2>Our Strategy</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
